# internal/app/handlers/handlers.go
@@ -11,17 +11,20 @@ type handler struct {
 	DB *gorm.DB
 }
 
-func RegisterRoutes(routes *gin.Engine, db *gorm.DB) {
+func InitRoutes(routes *gin.Engine, db *gorm.DB) {
 	h := &handler{
 		DB: db,
 	}
-	routes.GET("/ping", h.Ping)
 	routes.GET("/offices", h.GetOfficesWithinRadius)
 	routes.GET("/offices/:id", h.GetOffice)
+
 	routes.GET("/atms", h.GetAtmsWithinRadius)
 	routes.GET("/atms/:id", h.GetAtm)
-	routes.POST("/ticket", h.PickTicket)
+
 	routes.GET("/tickets", h.GetTickets)
+	routes.POST("/ticket", h.PickTicket)
+
+	routes.GET("/workloads/:officeId", h.GetWorkloadByOffice)
 
 	routes.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 }
