# internal/app/handlers/queries/office_id.go
@@ -7,10 +7,10 @@ import (
 
 func ParseQueryOfficeId(c *gin.Context) (int64, error) {
 	officeIdStr := c.Query("officeId")
-	userId, err := strconv.ParseInt(officeIdStr, 10, 64)
+	officeId, err := strconv.ParseInt(officeIdStr, 10, 64)
 	if err != nil {
 		return 0, err
 	}
 
-	return userId, err
+	return officeId, err
 }
